--- a/src/main/resources/templates/layout/nav.html
+++ b/src/main/resources/templates/layout/nav.html
@@ -6,10 +6,9 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item" style="font-weight: bold"><a class="nav-link" href="/board/write">글 작성</a></li>
+                <a class="nav-link" href="javascript:void(0)" onclick="isSessionExist('/board/write')">글 작성</a>
             </ul>&nbsp;&nbsp;
             <div th:if="${session.userName}">
-<!--                <a href="/user/detail" class="btn btn-group-lg" th:text="${session.userName} + '님'"></a>-->
                 <a th:href="@{/user/detail/{userNo}(userNo=${session.userNo})}" class="btn btn-group-lg" th:text="${session.userName} + '님'"></a>
                 <a href="/user/logout" class="btn btn-outline-dark">logout</a>
             </div>
