--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -5,8 +5,7 @@
 <div th:replace="layout/nav :: nav"></div>
 <div class="container mt-5">
     <h2 class="mb-4" style="font-weight: bold">어떤 부분을 수정하실 건가요?</h2>
-    <form th:action="@{/board/update}" th:object="${update}" method="post">
-        <input type="hidden" name="boardNo" th:value="${update.boardNo}" />
+    <form th:action="@{/board/update/{boardNo}(boardNo=${boardNo})}" th:object="${update}" method="post">
         <div class="form-row">
             <div class="mb-3">
                 <label for="postTitle1" class="form-label">제목</label>
@@ -52,7 +51,7 @@
             <textarea class="form-control" id="postContent" rows="6" placeholder="Enter your content" th:field="*{content}"></textarea>
         </div>
         <div class="text-end">
-            <button type="submit" class="btn btn-outline-dark"  onclick="return validateForm()">수정</button>
+            <button type="submit" class="btn btn-outline-dark" onclick="return validateForm()">수정</button>
         </div><br><br>
     </form>
 
