--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -24,7 +24,7 @@
             <div class="col-md-8">
                 <h2>작성한 글</h2>
                 <div class="list-group" th:each="myBoardList : ${myBoardList}">
-                    <a href="#" th:href="@{/board/detail/{id}(id=${myBoardList.boardNo})}" class="list-group-item list-group-item-action" aria-current="true">
+                    <a th:href="@{/board/detail/{id}(id=${myBoardList.boardNo})}" class="list-group-item list-group-item-action" aria-current="true">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1"><span th:text="${myBoardList.title}">제목</span></h5>
                             <small>마감일:<span th:text="${myBoardList.dueDate}">2024-04-15</span></small>
@@ -51,6 +51,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
+    <div class="container" style="margin-bottom: 0px"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
 </footer>
 </html>
