--- a/src/main/resources/templates/user/edit-profile.html
+++ b/src/main/resources/templates/user/edit-profile.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Profile</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <style>
+<div th:replace="layout/head :: head"></div>
+<style>
         body {
             background: darkgray;
             height: 100vh;
@@ -65,6 +60,7 @@
     </form>
 </div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+</body>
 <script>
     // 전화번호 입력 시 자동으로 하이픈(-) 추가
     document.getElementById('userPhone').addEventListener('input', function (e) {
@@ -80,5 +76,5 @@
         e.target.value = input;
     });
 </script>
-</body>
+
 </html>
