--- a/src/main/resources/templates/user/edit-profile.html
+++ b/src/main/resources/templates/user/edit-profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <div th:replace="layout/head :: head"></div>
+<link rel="stylesheet" th:href="@{/bootstrap/css/style.css}"/>
 <style>
         body {
             background: darkgray;
