--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <div th:replace="layout/head :: head"></div>
-    <style>
-        body {
-            background: darkgray;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .signup-container {
-            background: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,.05);
-            width: 100%;
-            max-width: 400px;
-        }
-        .signup-form button[type="submit"] {
-            background-color: dimgrey;
-            border: none;
-            padding: 10px;
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-        .signup-form button[type="submit"]:hover {
-            background-color: #3e00c7;
-        }
-        .signup-form input[type="email"], .signup-form input[type="password"], .signup-form input[type="text"] {
-            border: 1px solid #ddd;
-            margin-bottom: 20px;
-            padding: 10px;
-            border-radius: 5px;
-            width: 100%;
-        }
-        .error {
-            color: red;
-            font-size: 12px;
-        }
-    </style>
-<body>
+<style>
+    body {
+        background: darkgray;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .signup-container {
+        background: #fff;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,.05);
+        width: 100%;
+        max-width: 400px;
+    }
+    .signup-form button[type="submit"] {
+        background-color: dimgrey;
+        border: none;
+        padding: 10px;
+        color: #fff;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 100%;
+    }
+    .signup-form button[type="submit"]:hover {
+        background-color: #3e00c7;
+    }
+    .signup-form input[type="email"], .signup-form input[type="password"], .signup-form input[type="text"] {
+        border: 1px solid #ddd;
+        margin-bottom: 20px;
+        padding: 10px;
+        border-radius: 5px;
+        width: 100%;
+    }
+    .error {
+        color: red;
+        font-size: 12px;
+    }
+    /* 다크 모드일 때 회원가입 및 로그인 텍스트 색상 변경 */
+    body.dark-mode .signup-container .text-center {
+        color: black;
+    }
+</style>
+<body class="dark-mode">
 <div class="signup-container">
     <h2 class="text-center mb-4">회원가입</h2>
     <form class="signup-form" th:action="@{/user/join}" th:object="${joinRequest}"  method="post">
@@ -58,7 +62,6 @@
     </div>
 </div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-</body>
 <script>
     document.getElementById('userPhone').addEventListener('input', function (e) {
         var input = e.target.value.replace(/\D/g, ''); // 숫자가 아닌 모든 문자를 제거
