--- a/src/main/resources/templates/layout/head.html
+++ b/src/main/resources/templates/layout/head.html
@@ -1,6 +1,5 @@
 <head>
     <title>Learning_Mate</title>
-    <link rel="stylesheet" th:href="@{/bootstrap/css/style.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,6 +56,26 @@
     </script>
 
     <script>
+        // 특정 글자 수마다 줄바꿈 추가 함수
+        function addLineBreaks(selector, maxChars) {
+            const element = document.querySelector(selector);
+            if (element) {
+                let text = element.innerText;
+                let newText = '';
+                for (let i = 0; i < text.length; i += maxChars) {
+                    newText += text.substring(i, i + maxChars) + '\n';
+                }
+                element.innerText = newText;
+            }
+        }
+
+        // 페이지 로드 시 실행
+        document.addEventListener('DOMContentLoaded', function() {
+            addLineBreaks('#contentBox', 149); // 10글자 마다 줄바꿈 추가
+        });
+    </script>
+
+    <script>
         function validateForm() {
             // 입력 필드와 관련된 메시지를 객체로 정의
             const fields = [
@@ -90,6 +109,20 @@
         }
     </script>
 
+    <!-- 다크모드 -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var checkbox = document.getElementById('darkModeToggle');
+            checkbox.addEventListener('change', function() {
+                if(this.checked) {
+                    document.body.classList.add('dark-mode');
+                } else {
+                    document.body.classList.remove('dark-mode');
+                }
+            });
+        });
+    </script>
+
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // 모든 .title-truncate 요소를 선택
@@ -106,4 +139,30 @@
             });
         });
     </script>
+
+    <!-- 다크모드 유지 -->
+    <script>
+        // 사용자가 모드를 변경할 때 호출되는 함수
+        function toggleDarkMode() {
+            const body = document.body;
+            const isDarkMode = body.classList.toggle('dark-mode');
+            // 다크 모드 설정을 쿠키에 저장
+            document.cookie = "darkMode=" + isDarkMode + "; path=/";
+        }
+
+        // 페이지가 로드될 때 호출되는 함수
+        function loadDarkMode() {
+            const darkMode = document.cookie.replace(/(?:(?:^|.*;\s*)darkMode\s*\=\s*([^;]*).*$)|^.*$/, "$1");
+            const body = document.body;
+            if (darkMode === 'true') {
+                body.classList.add('dark-mode');
+            } else {
+                body.classList.remove('dark-mode');
+            }
+        }
+
+        // 페이지가 로드될 때 저장된 모드로 설정
+        document.addEventListener('DOMContentLoaded', loadDarkMode);
+    </script>
 </head>
+
