--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <div th:replace="layout/head :: head"></div>
-    <style>
-        body {
-            background: darkgray;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .login-container {
-            background: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,.05);
-            width: 100%;
-            max-width: 400px;
-        }
-        .login-form button[type="submit"] {
-            background-color: dimgrey;
-            border: none;
-            padding: 10px;
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-        .login-form button[type="submit"]:hover {
-            background-color: #3e00c7;
-        }
-        .login-form input[type="text"], .login-form input[type="password"] {
-            border: 1px solid #ddd;
-            margin-bottom: 20px;
-            padding: 10px;
-            border-radius: 5px;
-            width: 100%;
-        }
-        .error {
-            color: red;
-            font-size: 12px;
-        }
-    </style>
-<body>
+<div th:replace="layout/head :: head"></div>
+<style>
+    body {
+        background: darkgray;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .login-container {
+        background: #fff;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,.05);
+        width: 100%;
+        max-width: 400px;
+    }
+    .login-form button[type="submit"] {
+        background-color: dimgrey;
+        border: none;
+        padding: 10px;
+        color: #fff;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 100%;
+    }
+    .login-form button[type="submit"]:hover {
+        background-color: #3e00c7;
+    }
+    .login-form input[type="text"], .login-form input[type="password"] {
+        border: 1px solid #ddd;
+        margin-bottom: 20px;
+        padding: 10px;
+        border-radius: 5px;
+        width: 100%;
+    }
+    .error {
+        color: red;
+        font-size: 12px;
+    }
+    /* 다크 모드일 때 로그인 텍스트 색상 변경 */
+    body.dark-mode .login-container .text-center {
+        color: black;
+    }
+</style>
+<body class="dark-mode">
 <div class="login-container">
     <h2 class="text-center mb-4">로그인</h2>
     <form class="login-form" th:action th:object="${loginRequest}" method="post">
