--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -11,6 +11,8 @@
         }
     }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <div class="container mt-5">
     <h1 class="detail-header" th:text="${boardList.title}">Study Title</h1><br>
     <div class="text-end mb-3" th:if="${boardList.writer != null and session.userNo == boardList.writer.userNo}" style="padding: 0;">
@@ -43,6 +45,7 @@
         <!-- 댓글 섹션 시작 -->
         <div class="comments-section">
             <h3 style="text-align: left; font-weight: bold;">댓글</h3>
+
             <!-- 댓글 입력 -->
             <form id="commentForm" th:action="@{/board/detail/reply/{boardNo}(boardNo = ${boardList.boardNo})}" th:object="${replyRequest}" th:method="post">
                 <div class="mb-3">
@@ -59,12 +62,34 @@
                 <div th:each="reply : ${replyList}">
                     <div class="comment">
                         <p th:text="'🙋🏻 '+${reply.writer}" class="comment-author" style="font-weight: bold; font-size:22px;">작성자</p>
+
                         <div class="comment-content-container">
                             <div th:text="${reply.comment}" style="flex-grow: 1;">댓글 내용</div>
+
+                            <!-- 댓글 수정 -->
+                            <div class="text-end" th:if= "${session.userName != null and session.userName == reply.writer}">
+                                <button class="btn btn-outline-dark" data-bs-toggle="collapse" th:data-bs-target="'#updateReplyForm' + ${reply.replyNo}" aria-expanded="false" aria-controls="updateReplyForm">수정</button>
+                            </div>
+
+                            <!-- 댓글 삭제 -->
                             <div class="text-end" th:if= "${session.userName != null and session.userName == reply.writer}">
                                 <a class="btn btn-outline-dark" th:href="@{/board/detail/{boardNo}/reply/remove/{replyNo}(boardNo = ${boardList.boardNo}, replyNo = ${reply.replyNo})}">삭제</a>
                             </div>
+
                         </div>
+
+                        <div class="collapse" th:id="'updateReplyForm' + ${reply.replyNo}">
+                            <form th:action="@{/board/detail/{boardNo}/reply/update/{replyNo}(boardNo = ${boardList.boardNo}, replyNo = ${reply.replyNo})}" th:object="${replyRequest}" th:method="post">
+                                <div class="mb-3">
+                                    <textarea class="form-control" id="updateText" th:field="*{comment}" th:text="${reply.comment}" rows="3"></textarea>
+                                </div>
+
+                                <div class="text-end">
+                                    <button type="submit" class="btn btn-outline-dark"  style="margin-right: 30px; border-radius: 30px">수정하기</button>
+                                </div>
+                            </form>
+                        </div>
+
                         <hr><br>
                     </div>
                 </div>
